# quickfit

./: .env.k8s.local.example  .gitignore  LICENSE  README.md  Taskfile.yml
api/: .dockerignore  .env.example  Dockerfile  compose.test.yaml  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 02900b7e2e30_add_owner_id_field_to_planshare.py  0a67276946ca_update_is_default_plan.py  32f7f2fde512_rename_point.py  4b46226ee896_make_set_log_unique_constraint_.py  514989ce51d0_modify_unique_constraint_on_exercise.py  6cfee36813df_synchronized_column_for_workoutlog.py  9c1f4a7d3e6b_add_friendship_model.py  a3d32206a616_deffer_set_log_constraint_fix.py  a994fe8f8cb5_remove_gt_0_from_set_log.py  b3e7a2f5c9d1_cascade_delete_user_owned_rows.py  be0fe0db415d_add_plan_exercise_workout_models.py  c4d8e1a6f2b7_add_name_to_user.py  ccfa1f5dc4ac_add_setlog_constraint.py  d8f3a91c4b76_seed_base_exercises.py
api/data/: base_exercises.json
api/src/: deps.py  main.py  run.py  worker.py
api/src/auth/: dependencies.py  google.py  router.py  schemas.py  security.py  service.py
api/src/common/: exceptions.py  logging_config.py  schema.py
api/src/config/: db.py  middleware.py  service.py
api/src/exercise/: router.py  schema.py  service.py
api/src/friend/: router.py  schema.py  service.py
api/src/google_health/: const.py  google_client.py  router.py  schema.py  service.py  util.py
api/src/health/: router.py  schemas.py
api/src/models/: __init__.py  exercise.py  friendship.py  model_base.py  plan.py  plan_session.py  plan_share.py  set_log.py  (+3 more)
api/tests/: conftest.py
(+136 files in other folders)
